@@ -1,5 +1,6 @@
 package com.alal.backend.service.user;
 
+import com.alal.backend.payload.request.auth.FlaskRequest;
 import com.alal.backend.payload.response.FlaskResponse;
 import com.alal.backend.payload.response.ViewResponse;
 import com.alal.backend.repository.user.MotionRepository;
@@ -15,10 +16,7 @@ import org.springframework.web.multipart.MultipartFile;
 import org.springframework.web.reactive.function.client.WebClient;
 
 import java.io.IOException;
-import java.util.ArrayList;
-import java.util.Base64;
-import java.util.Collections;
-import java.util.List;
+import java.util.*;
 import java.util.stream.Collectors;
 
 @Service
@@ -34,11 +32,11 @@ public class MotionService {
 
     @Transactional(readOnly = true)
     public Page<ViewResponse> findUrlByUploadMp4(MultipartFile file, Pageable pageable) {
-        // MultipartFile을 base64 인코딩
-        String base64EncodedVoice = convertMultipartFileToBase64(file);
+        // MultipartFile을 base64 인코딩, 파일 형식 추출
+        FlaskRequest flaskRequest = convertMultipartFileToBase64(file);
 
         // Flask 서버 통신
-        List<FlaskResponse> flaskResponses = communicateWithFlaskServer(base64EncodedVoice);
+        List<FlaskResponse> flaskResponses = communicateWithFlaskServer(flaskRequest);
         List<String> responseMessages = flaskResponses.stream()
                 .map(FlaskResponse::getResponseMessage)
                 .collect(Collectors.toList());
@@ -48,22 +46,26 @@ public class MotionService {
     }
 
     // MultipartFile을 base64로 변환하는 메서드
-    private String convertMultipartFileToBase64(MultipartFile file) {
+    private FlaskRequest convertMultipartFileToBase64(MultipartFile file) {
         try {
             byte[] fileBytes = file.getBytes();
-            return Base64.getEncoder().encodeToString(fileBytes);
+            String fileFormat = file.getContentType() != null ? file.getContentType().split("/")[1] : "";
+
+            FlaskRequest flaskRequest = FlaskRequest.fromFile(Base64.getEncoder().encodeToString(fileBytes), fileFormat);
+            return flaskRequest;
         } catch (IOException e) {
             throw new RuntimeException(e);
         }
     }
 
     // Flask 서버 통신
-    private List<FlaskResponse> communicateWithFlaskServer(String base64EncodedVoice) {
+    private List<FlaskResponse> communicateWithFlaskServer(FlaskRequest flaskRequest) {
         // 파일을 Flask 서버로 전송
         List<FlaskResponse> flaskResponses =  webClient.post()
                 .uri(flaskUrl + "/checkpose/")
                 .contentType(MediaType.APPLICATION_JSON)
-                .bodyValue(Collections.singletonMap("pose", base64EncodedVoice))
+                .bodyValue(Map.of("pose", flaskRequest.getBase64EncodedFile(),
+                        "format", flaskRequest.getFileFormat()))
                 .retrieve()
                 .bodyToFlux(FlaskResponse.class)
                 .collectList()
